add authentication and authorization

--- a/module-02/lesson-11/basic-auth/views/layout.hbs
+++ b/module-02/lesson-11/basic-auth/views/layout.hbs
@@ -1,6 +1,17 @@
 <!-- views/layout.hbs -->
 <!-- ... -->
 
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Basic Auth</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
   <body>
 
     <!-- add the navbar code below -->
@@ -12,6 +23,13 @@
         <li id="to-right">
           <a href="/signup">Signup</a>
         </li>
+        <li id="to-right">
+          <a href="/login">Login</a>
+        </li>
+        <li id="to-right">
+          <form action="/logout" method="POST">
+          <button type="submit">Logout</button>
+          </form>
       </ul>
     </nav>
 
@@ -19,5 +37,7 @@
 
     <script src="/js/script.js"></script>
   </body>
+
+</html>
 
    <!-- ... -->
